scrollbar issue resolved

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,3 +13,7 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
